--- a/feature/list/src/main/res/layout/item_post_list.xml
+++ b/feature/list/src/main/res/layout/item_post_list.xml
@@ -31,4 +31,15 @@
         app:layout_constraintStart_toEndOf="@+id/idTv"
         app:layout_constraintTop_toTopOf="@+id/idTv"
         tools:text="TextView" />
+
+    <EditText
+        android:id="@+id/titleEt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@+id/titleTv"
+        app:layout_constraintEnd_toEndOf="@id/titleTv"
+        app:layout_constraintTop_toBottomOf="@+id/titleTv"
+        tools:text="TextView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
