--- a/feature/list/src/main/res/layout/post_list_fragment.xml
+++ b/feature/list/src/main/res/layout/post_list_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".PostListFragment">
 
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/listRv"
         android:layout_width="0dp"
         android:layout_height="0dp"
